vse tak zhe malo sdelal

--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/import.css">
 	<title>Hlegals Home</title>
 </head>
@@ -41,6 +44,9 @@
 						<a class="social-link fab fa-facebook" href="#"></a>
 
 					</div>
+
+					<!-- Навигация -->
+
 					<nav class="header-nav">
 						<a class="nav-link" href="#">about us</a>
 						<a class="nav-link" href="#">services</a>
@@ -49,13 +55,119 @@
 						<a class="nav-link" href="#">contact</a>
 					</nav>
 				</div>
+
+				<!-- <div class="main-logo">
+					<div class="logo-slogan">you legal solutions provider</div>
+					<img src="./icons/Button.svg" alt="">
+				</div> -->
 			</header>
 
+
+			<!-- Цели -->
+			<div class="goals-wrapper">
+				<div class="goals">
+					<p class="goal-item custom-item1">Consistent</p>
+					<p class="goal-item custom-item2">Customer oriented</p>
+					<p class="goal-item">Innovative</p>
+					<p class="goal-item">Business oriented</p>
+				</div>
+				<div class="goal-slogan">
+					<h3 class="goal-title">We turn the idea of legal services</h3>
+					<p class="goal-text">Consolidating many years of experience and practice, the company's lawyers accompany
+						complex projects and achieve a number of important decisions for the industry. Many of them form the
+						practice of applying the law of the sea in Ukraine.</p>
+				</div>
+			</div>
 			<!-- Ссылка -->
 			<div class="services-link">
 				<a href="#"><img src="./img/logo/Link-services.svg" alt="Services"></a>
 			</div>
 			<!-- Слоган -->
+			<p class="slogan">What can we do better than others?</p>
+
+			<!-- Карточки -->
+			<ul class="services-cards">
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-1.svg" alt="services icon" />
+						</div>
+						<h3 class="card-title">IT and e-commerce</h3>
+					</div>
+					<p class="card-text">
+						An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts
+						you from doing business. But there is not much work to do to hire an in-house lawyer.
+					</p>
+				</li>
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-2.svg"" alt=" services icon" />
+						</div>
+						<h3 class="card-title">
+							Comprehensive daily
+							legal support
+						</h3>
+					</div>
+					<p class="card-text">
+						In addition, over time, the work will become the same type and uninteresting for a full-time lawyer.
+						And we know very well how difficult it is to find a good candidate with experience in the field of
+						information technology in Ukraine.
+					</p>
+				</li>
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-3.svg"" alt=" services icon" />
+						</div>
+						<h3 class="card-title">Structuring corporate relationships</h3>
+					</div>
+					<p class="card-text">
+						Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the
+						daily life of your company.
+					</p>
+				</li>
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-4.svg"" alt=" services icon" />
+						</div>
+						<h3 class="card-title">Building contractual relations</h3>
+					</div>
+					<p class="card-text">
+						Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can
+						catch it at the coffee maker and just talk about current affairs instead of waiting for update status.
+					</p>
+				</li>
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-4.svg" alt="services icon" />
+						</div>
+						<h3 class="card-title">
+							Protection of business, intellectual property
+						</h3>
+					</div>
+					<p class="card-text">
+						And all the other time he will work on new diverse projects, so he will definitely not stop in
+						professional development. One way or another, all Axon Partners will work for you instead of a
+						corporate lawyer.
+					</p>
+				</li>
+				<li class="services-card">
+					<div class="card-header">
+						<div class="card-logo">
+							<img src="./icons/Icon-6.svg" alt="services icon" />
+						</div>
+						<h3 class="card-title">Judicial representation</h3>
+					</div>
+					<p class="card-text">
+						Is it a small, medium-sized company or a market leader? Local business or multinational company? Do
+						you have your own legal department or not?
+					</p>
+				</li>
+			</ul>
+		</div>
 
 		</div>
 	</section>
