--- a/home.html
+++ b/home.html
@@ -15,55 +15,65 @@
 
 <body>
 	<section class="main">
-		<div class="container">
+		<div class="container-1">
 			<!-- Header -->
 			<header class="header">
-				<div class="logo-container">
-					<a class="logo" href="#"><img src="./img/logo/Logo.svg" alt="Logo"></a>
-				</div>
-				<div class="header-actions">
-					<div class="header-contacts">
-						<ul class="langs-list">
-							<li class="langs-item">
-								<button class="lang-btn ">УК</button>
-							</li>
-							<li class="langs-item">
-								<button class="lang-btn">РУ</button>
-							</li>
-							<li class="langs-item">
-								<button class="lang-btn lang-btn-active">EN</button>
-							</li>
-						</ul>
-						<a href="https://www.google.com/maps/place/ул.+Мечникова,+14%2F1,+Киев,+02000/data=!4m2!3m1!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a?sa=X&ved=2ahUKEwjm3trbjo72AhUPrYsKHTFTCqQQ8gF6BAgSEAE"
-							target="_blank" class="address">
-							Kyiv, Mechnikova str, 14/1
-						</a>
-						<a class="phone-number" href="tel:0800211927">
-							0800 211 927
-						</a>
-						<a class="social-link fab fa-facebook" href="#"></a>
+				<section class="header-inner">
+					<div class="header-inner-wrapper">
+						<div class="logo-container">
+							<a class="logo" href="#"><img src="./img/logo/Logo.svg" alt="Logo"></a>
+						</div>
+						<div class="header-actions">
+							<div class="header-contacts">
+								<ul class="langs-list">
+									<li class="langs-item">
+										<button class="lang-btn ">УК</button>
+									</li>
+									<li class="langs-item">
+										<button class="lang-btn">РУ</button>
+									</li>
+									<li class="langs-item">
+										<button class="lang-btn lang-btn-active">EN</button>
+									</li>
+								</ul>
+								<a href="https://www.google.com/maps/place/ул.+Мечникова,+14%2F1,+Киев,+02000/data=!4m2!3m1!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a?sa=X&ved=2ahUKEwjm3trbjo72AhUPrYsKHTFTCqQQ8gF6BAgSEAE"
+									target="_blank" class="address">
+									Kyiv, Mechnikova str, 14/1
+								</a>
+								<a class="phone-number" href="tel:0800211927">
+									0800 211 927
+								</a>
+								<a class="social-link fab fa-facebook" href="#"></a>
+
+							</div>
+
+							<!-- Навигация -->
+
+							<nav class="header-nav">
+								<a class="nav-link" href="#">about us</a>
+								<a class="nav-link" href="#">services</a>
+								<a class="nav-link" href="#">team</a>
+								<a class="nav-link" href="#">publications</a>
+								<a class="nav-link" href="#">contact</a>
+							</nav>
+						</div>
+
 
 					</div>
-
-					<!-- Навигация -->
-
-					<nav class="header-nav">
-						<a class="nav-link" href="#">about us</a>
-						<a class="nav-link" href="#">services</a>
-						<a class="nav-link" href="#">team</a>
-						<a class="nav-link" href="#">publications</a>
-						<a class="nav-link" href="#">contact</a>
-					</nav>
-				</div>
-
-				<!-- <div class="main-logo">
-					<div class="logo-slogan">you legal solutions provider</div>
-					<img src="./icons/Button.svg" alt="">
-				</div> -->
+					<!--  Слоган и фоновый логотип-->
+					<div class="header-inner-slogan-wrapper">
+						<p class="inner-slogan">your legal solutions provider</p>
+					</div>
+					<!-- Кнопка в фоновом логотипе -->
+					<div class="inner-button-wrapper">
+						<button class="inner-button"><img src="./icons/Button.svg" alt="Кнопка «button»"></button>
+					</div>
+				</section>
 			</header>
 
-
-			<!-- Цели -->
+		</div>
+		<!-- Цели -->
+		<div class="container-3">
 			<div class="goals-wrapper">
 				<div class="goals">
 					<p class="goal-item custom-item1">Consistent</p>
@@ -78,7 +88,9 @@
 						practice of applying the law of the sea in Ukraine.</p>
 				</div>
 			</div>
-			<!-- Ссылка -->
+		</div>
+		<!-- Ссылка -->
+		<div class="container-1">
 			<div class="services-link">
 				<a href="#"><img src="./img/logo/Link-services.svg" alt="Services"></a>
 			</div>
@@ -169,8 +181,76 @@
 			</ul>
 		</div>
 
+
+
+	</section>
+
+	<!-- Список компаний -->
+	<section class="companies">
+		<div class="container-1">
+			<div class="subtitle-main-wrapper">
+				<div class="subtitle">They already trust us</div>
+			</div>
+		</div>
+		<div class="container-2">
+			<div class="company-wrapper">
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp1.png"
+						alt="компания 1"></a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp2.png" alt="компания 2">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp3.png" alt="компания 3">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp4.png" alt="компания 4">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp5.png" alt="компания 6">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp6.png" alt="компания 7">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp7.png" alt="компания 8">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp8.png" alt="компания 9">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp9.png"
+						alt="компания 10">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp10.png"
+						alt="компания 11">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp11.png"
+						alt="компания 12">
+				</a>
+				<a class="company-link" href="#"><img class="company-logo" src="./img/companies/comp12.png"
+						alt="компания 13">
+				</a>
+			</div>
 		</div>
 	</section>
+	<!-- Футер -->
+	<footer class="footer">
+		<div class="container-1">
+			<div class="footer-wrapper">
+				<ul class="nav-wrapper">
+					<a class="address-footer"
+						href="https://www.google.com/maps/place/ул.+Мечникова,+14%2F1,+Киев,+02000/data=!4m2!3m1!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a?sa=X&ved=2ahUKEwjm3trbjo72AhUPrYsKHTFTCqQQ8gF6BAgSEAE">Kyiv,
+						Mechnikova str, 14/1
+					</a>
+					<a href="https://www.google.com/maps/place/ул.+Мечникова,+14%2F1,+Киев,+02000/data=!4m2!3m1!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a?sa=X&ved=2ahUKEwjm3trbjo72AhUPrYsKHTFTCqQQ8gF6BAgSEAE"
+						target="_blank" class="map">On map</a>
+
+					<a class="social-link__footer fab fa-facebook" href="#"></a>
+					<a class="phone-number_footer" href="tel:0800 211 927">
+						0800 211 927
+					</a>
+					<a href="mailto:contact@forstudy.space" class="mail-footer">contact@forstudy.space</a>
+				</ul>
+				<div class="copyright-wrapper">
+					© 2021 HLEGAL Law company, LLC
+				</div>
+			</div>
+
+		</div>
+		</а>
+	</footer>
 </body>
 
 </html>
