кроме команды, публикаций нормального футера  и адаптива, почистил валидатором

--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
 				<li class="services-card">
 					<div class="card-header">
 						<div class="card-logo">
-							<img src="./icons/Icon-2.svg"" alt=" services icon" />
+							<img src="./icons/Icon-2.svg" alt=" services icon" />
 						</div>
 						<h3 class="card-title">
 							Comprehensive daily
@@ -130,7 +130,7 @@
 				<li class="services-card">
 					<div class="card-header">
 						<div class="card-logo">
-							<img src="./icons/Icon-3.svg"" alt=" services icon" />
+							<img src="./icons/Icon-3.svg" alt=" services icon" />
 						</div>
 						<h3 class="card-title">Structuring corporate relationships</h3>
 					</div>
@@ -142,7 +142,7 @@
 				<li class="services-card">
 					<div class="card-header">
 						<div class="card-logo">
-							<img src="./icons/Icon-4.svg"" alt=" services icon" />
+							<img src="./icons/Icon-4.svg" alt=" services icon" />
 						</div>
 						<h3 class="card-title">Building contractual relations</h3>
 					</div>
@@ -229,7 +229,7 @@
 	<footer class="footer">
 		<div class="container-1">
 			<div class="footer-wrapper">
-				<ul class="nav-wrapper">
+				<div class="nav-wrapper">
 					<a class="address-footer"
 						href="https://www.google.com/maps/place/ул.+Мечникова,+14%2F1,+Киев,+02000/data=!4m2!3m1!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a?sa=X&ved=2ahUKEwjm3trbjo72AhUPrYsKHTFTCqQQ8gF6BAgSEAE">Kyiv,
 						Mechnikova str, 14/1
@@ -242,14 +242,14 @@
 						0800 211 927
 					</a>
 					<a href="mailto:contact@forstudy.space" class="mail-footer">contact@forstudy.space</a>
-				</ul>
+				</div>
 				<div class="copyright-wrapper">
 					© 2021 HLEGAL Law company, LLC
 				</div>
 			</div>
 
 		</div>
-		</а>
+
 	</footer>
 </body>
 
