--- a/home.html
+++ b/home.html
@@ -73,22 +73,29 @@
 
 		</div>
 		<!-- Цели -->
-		<div class="container-3">
-			<div class="goals-wrapper">
-				<div class="goals">
-					<p class="goal-item custom-item1">Consistent</p>
-					<p class="goal-item custom-item2">Customer oriented</p>
-					<p class="goal-item">Innovative</p>
-					<p class="goal-item">Business oriented</p>
-				</div>
-				<div class="goal-slogan">
-					<h3 class="goal-title">We turn the idea of legal services</h3>
-					<p class="goal-text">Consolidating many years of experience and practice, the company's lawyers accompany
-						complex projects and achieve a number of important decisions for the industry. Many of them form the
-						practice of applying the law of the sea in Ukraine.</p>
+		<section class="experience">
+			<div class="container-1">
+				<ul class="experience__list">
+					<li class="experience__item experience__item--active">
+						Consistent
+					</li>
+					<li class="experience__item">Customer oriented</li>
+					<li class="experience__item">Innovative</li>
+					<li class="experience__item">Business oriented</li>
+				</ul>
+				<div class="experience__descr">
+					<h3 class="experience__title">
+						We turn the idea of legal services
+					</h3>
+					<p class="experience__text">
+						Consolidating many years of experience and practice, the company's
+						lawyers accompany complex projects and achieve a number of
+						important decisions for the industry. Many of them form the
+						practice of applying the law of the sea in Ukraine.
+					</p>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- Ссылка -->
 		<div class="container-1">
 			<div class="services-link">
